<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MercaYApp</string>
    <string name="getProducts">Listar productos</string>
    <string name="inicio">Inicio</string>
    <string name="regresar">Regresar</string>
    <string name="codigoDeBarras">Código de barras</string>
    <string name="escanearProducto">Escanear producto</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="escanearProductos">Escanear Productos</string>
    <string name="consultarFacturas">Consultar facturas</string>
    <string name="agregarAlCarrito">Agregar al carrito</string>
    <string name="consultarCarrito">Consultar carrito</string>
    <string name="pagar">Pagar</string>

</resources>
