<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ScanActivity">
    <item android:id="@+id/escanearProducto" android:title="@string/escanearProducto"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/inicio" android:title="@string/inicio"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/consultarFacturas" android:title="@string/consultarFacturas"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/consultarCarrito" android:title="@string/consultarCarrito"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
