<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user"
        android:id="@+id/lblUsuario"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/campoUser"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/campoPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/btnIngresar"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="ingresar" />

    <Button
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="Crear codigo"
        android:id="@+id/btnCrearCodigo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="crearCodigo" />

</LinearLayout>